--- a/front-end/package.json
+++ b/front-end/package.json
@@ -25,6 +25,9 @@
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
+  "overrides": {
+    "autoprefixer": "10.4.5"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
