--- a/front-end/package.json
+++ b/front-end/package.json
@@ -26,7 +26,8 @@
     "react-toastify": "^9.0.5",
     "styled-components": "^5.3.5",
     "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "overrides": {
     "autoprefixer": "10.4.5"
